feat(BatchOS): Implement syscalls, privilege switch and batch system.

--- a/os/Makefile
+++ b/os/Makefile
@@ -4,18 +4,24 @@ build:
 build_release:
 	cargo build --release
 
+build_user:
+	cd ../user && make build
+
 remove_metadata: build_release
 	~/.cargo/bin/rust-objcopy --strip-all target/riscv64gc-unknown-none-elf/release/os \
 	  -O binary target/riscv64gc-unknown-none-elf/release/os.bin
+	  
 
-qemu_start: remove_metadata
+build_all: remove_metadata build_user
+
+qemu_start: build_all
 	qemu-system-riscv64 \
             -machine virt \
             -nographic \
             -bios none \
             -device loader,file=target/riscv64gc-unknown-none-elf/release/os.bin,addr=0x80000000
 
-qemu_start_gdb: remove_metadata
+qemu_start_gdb: build_all
 	qemu-system-riscv64 \
         -machine virt \
         -nographic \
