--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 volatile = "0.6.1"
 bitflags = "2.9.1"
+lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+riscv = "0.13.0"
