feat(Process): Implement process and user shell.

--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-riscv = "0.13.0"
+buddy_system_allocator = "0.6"
 
 [profile.release]
 debug = true
